--- a/.github/workflows/run-pipeline.yml
+++ b/.github/workflows/run-pipeline.yml
@@ -32,7 +32,9 @@ jobs:
             libmagick++-dev \
             pandoc
     
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref }}
       - uses: r-lib/actions/setup-r@v2
       - uses: r-lib/actions/setup-renv@v2
   
